# 2353-Project

./: .gitignore  CMakeLists.txt  README.md
graphs/: random.graphml  random1.graphml  random2.graphml
helpful-scripts/: Random_Graph_generator.py  dotTopng.py  import networkx as nx
output/: footbball_output1.dot  footbball_output2.dot  footbball_output3.dot  footbball_output_begin.dot  random1_output1.dot  random1_output2.dot  random1_output3.dot  random1_output4.dot  random1_output_begin.dot  random2_output1.dot  random2_output2.dot  random2_output3.dot  random2_output4.dot  random2_output_begin.dot  random_output1.dot  random_output2.dot  random_output3.dot  random_output4.dot  random_output_begin.dot
src/: main.cpp
